--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "better-scroll": "^2.0.0-beta.2",
-    "dva": "^2.4.1",
+    "dva": "^2.6.0-beta.12",
+    "dva-loading": "^3.0.14",
     "history": "^4.9.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-lazyload": "^2.6.2",
     "react-router-config": "^5.0.1",
     "styled-components": "^4.3.2",
     "swiper": "^4.5.0"
